# rooster-spec

./: .gitignore  .temp  CategoryTest.hs  DecompilerTest.hs  DecompilerTest.ml  DecompilerTest.mli  DecompilerTest.smt2  FunctorTest.hs  GenericGroupTest.hs  ListMonadTest.hs  ListMonadTest.smt2  LogicTest.hs  LogicTest.smt2  Makefile  MonadTest.hs  MonadTest.smt2  QRevExample.hs  QRevExample.ml  QRevExample.mli  QRevExample.smt2  README.md  SemigroupTest.hs  SemigroupTest.ml  SemigroupTest.mli  SemigroupTest.smt2  SetTest.hs  SetTest.smt2  Test.hs  Test.smt2  TreesTest.hs  TreesTest.smt2  ZArithSmaller.smt2  ZArithTest.hs  ZArithTest.ml  ZArithTest.mli  ZArithTest.smt2  ZGroupTest.hs  ZGroupTest.smt2  coq-spec.opam  dune-project  (+18 more)
src/: .Extraction.aux  Extraction.glob  Extraction.vo  ce_api.ml  ce_syntax.ml4  dune
theories/: #MonadTest.v#  #SatSolverTest.v#  #ZArithTest.v#  .Cpdtactics.aux  .MonadTest.aux  .QRevExample.aux  .SetTest.aux  .Test.aux  .ZArithTest.aux  .asd.aux  Cpdtactics.glob  DecompilerTest.v  GroupTest.v  MonadTest.glob  MonadTest.v  MonadTest.vo  QRevExample.glob  QRevExample.v  SatSolverTest.v  SetTest.glob  SetTest.v  Test.glob  Test.v  Test.vo  TreeTest.v  ZArithTest.glob  ZArithTest.v  asd.glob  dune
