synopsis:     "Coq Plugin Template"
description:  "Coq Plugin Template"
name:         "coq_spec"
opam-version: "2.0"
maintainer:   "your@mail.org"
authors:      "You Name"
homepage:     "https://github.com/your-github/coq-spec"
bug-reports:  "https://github.com/your-github/coq-spec"
dev-repo:     "git+https://github.com/your-github/coq-spec"
license:      "GPL 3"
doc:          "https://your-github.github.io/coq-spec/doc"

depends: [
  "ocaml"         { >= "4.07.1"           }
  "coq"           { >= "8.9.0" & < "8.10" }
  "dune"          { build & >= "1.9.0"    }
]

build: [ "dune" "build" "-p" name "-j" jobs ]
