(coq.theory
 (name CoqSpec)
 (public_name coq-spec.theory)
 (libraries coq-spec.plugin))  ; Here you should declare the
                                ; dependencies on the ML plugins your
                                ; Coq files depend.

; Other important fields are `modules` and `flags`, see Dune
; documentation for more details.
